# secret_sharing_scheme

./: Cargo.toml  README.md
src/: lib.rs  modular_arithmetic.rs  secret_sharing_scheme.rs
