[package]
name = "PAPER"
version = "0.1.0"
authors = ["fiono"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe.git" }
ff-fft = { git = "https://github.com/scipr-lab/zexe.git" }
poly-commit = { git = "https://github.com/scipr-lab/poly-commit.git" }
rand = { version = "0.7" }
num = { version = "0.2", features = ["rand"] }
curve25519-dalek = "2"

